; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/ntp/lib/isc/win32/extr_condition.c_find_thread_condition.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/ntp/lib/isc/win32/extr_condition.c_find_thread_condition.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_11__ = type { i32 }
%struct.TYPE_10__ = type { i64 }

@ISC_R_SUCCESS = common dso_local global i32 0, align 4
@link = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64, %struct.TYPE_11__*, %struct.TYPE_10__**)* @find_thread_condition to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @find_thread_condition(i64 %0, %struct.TYPE_11__* %1, %struct.TYPE_10__** %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = alloca %struct.TYPE_11__*, align 8
  %7 = alloca %struct.TYPE_10__**, align 8
  %8 = alloca %struct.TYPE_10__*, align 8
  store i64 %0, i64* %5, align 8
  store %struct.TYPE_11__* %1, %struct.TYPE_11__** %6, align 8
  store %struct.TYPE_10__** %2, %struct.TYPE_10__*** %7, align 8
  %9 = load %struct.TYPE_10__**, %struct.TYPE_10__*** %7, align 8
  %10 = icmp ne %struct.TYPE_10__** %9, null
  br i1 %10, label %11, label %15

11:                                               ; preds = %3
  %12 = load %struct.TYPE_10__**, %struct.TYPE_10__*** %7, align 8
  %13 = load %struct.TYPE_10__*, %struct.TYPE_10__** %12, align 8
  %14 = icmp eq %struct.TYPE_10__* %13, null
  br label %15

15:                                               ; preds = %11, %3
  %16 = phi i1 [ false, %3 ], [ %14, %11 ]
  %17 = zext i1 %16 to i32
  %18 = call i32 @REQUIRE(i32 %17)
  %19 = load %struct.TYPE_11__*, %struct.TYPE_11__** %6, align 8
  %20 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = call %struct.TYPE_10__* @ISC_LIST_HEAD(i32 %21)
  store %struct.TYPE_10__* %22, %struct.TYPE_10__** %8, align 8
  br label %23

23:                                               ; preds = %37, %15
  %24 = load %struct.TYPE_10__*, %struct.TYPE_10__** %8, align 8
  %25 = icmp ne %struct.TYPE_10__* %24, null
  br i1 %25, label %26, label %41

26:                                               ; preds = %23
  %27 = load %struct.TYPE_10__*, %struct.TYPE_10__** %8, align 8
  %28 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %27, i32 0, i32 0
  %29 = load i64, i64* %28, align 8
  %30 = load i64, i64* %5, align 8
  %31 = icmp eq i64 %29, %30
  br i1 %31, label %32, label %36

32:                                               ; preds = %26
  %33 = load %struct.TYPE_10__*, %struct.TYPE_10__** %8, align 8
  %34 = load %struct.TYPE_10__**, %struct.TYPE_10__*** %7, align 8
  store %struct.TYPE_10__* %33, %struct.TYPE_10__** %34, align 8
  %35 = load i32, i32* @ISC_R_SUCCESS, align 4
  store i32 %35, i32* %4, align 4
  br label %46

36:                                               ; preds = %26
  br label %37

37:                                               ; preds = %36
  %38 = load %struct.TYPE_10__*, %struct.TYPE_10__** %8, align 8
  %39 = load i32, i32* @link, align 4
  %40 = call %struct.TYPE_10__* @ISC_LIST_NEXT(%struct.TYPE_10__* %38, i32 %39)
  store %struct.TYPE_10__* %40, %struct.TYPE_10__** %8, align 8
  br label %23

41:                                               ; preds = %23
  %42 = load i64, i64* %5, align 8
  %43 = load %struct.TYPE_11__*, %struct.TYPE_11__** %6, align 8
  %44 = load %struct.TYPE_10__**, %struct.TYPE_10__*** %7, align 8
  %45 = call i32 @register_thread(i64 %42, %struct.TYPE_11__* %43, %struct.TYPE_10__** %44)
  store i32 %45, i32* %4, align 4
  br label %46

46:                                               ; preds = %41, %32
  %47 = load i32, i32* %4, align 4
  ret i32 %47
}

declare dso_local i32 @REQUIRE(i32) #1

declare dso_local %struct.TYPE_10__* @ISC_LIST_HEAD(i32) #1

declare dso_local %struct.TYPE_10__* @ISC_LIST_NEXT(%struct.TYPE_10__*, i32) #1

declare dso_local i32 @register_thread(i64, %struct.TYPE_11__*, %struct.TYPE_10__**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
